# gripper

./: .gitignore  README.md  compute_add_from_txt.py  compute_add_pnp_only copy.py  dataset.py  debug.py  devide_ref.py  environment.yaml  export_dataset.py  export_dataset_for_bop.py  gen_pca_model.py  get_single_image.py  just_vis.py  match.py  match_demo.py  matcher.py  matcher_bak.py  memory_pool.py  optimize_reproject_error.ipynb  ref_dataset.py  rename.py  test.py  test_on_sim_frame.py  test_on_sim_seq.py  test_on_ycbv.py  test_on_ycbv.sh  ty_datasets.py  vis.ipynb  visualizer.py
Track-Anything/: app.py  track_anything.py
cpp/: test.cpp
datasets/: bop_datasets.py  real_dataset.py  ref_dataset.py  ty_datasets.py  ycb_dataset.py
models/: point_encoder.py  uni3d.py
try_pybind11/: CMakeLists.txt  main.cpp
utils/: basic.py  geometric_vision.py  improc.py  metrics.py  quaternion_utils.py  spd.py
